# triton-moirai

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  Makefile  README.md  dehydrated-hook  dehydrated.cfg  dhparam.pem  genconfig  package.json  parser.js  reconfigure
boot/: setup.sh
docs/: operator-guide.md
haproxy.cfg/: 000-global.cfg  001-defaults.cfg  002-resolver.cfg
smf/: postboot.xml
smf/manifests/: haproxy.xml.in  postboot.xml
src/: certificates.rs  lib.rs  reconfigure.rs
templates/: 000-global.cfg  000-global.cfg.askama  001-defaults.cfg  002-resolver.cfg  100-services.cfg.askama  100-services.cfg.jinja  200-metrics.cfg.askama
tools/: mock-mdata-get
tools/mk/: Makefile.haproxy.defs  Makefile.haproxy.targ
