[package]
name = "triton-moirai"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"    # For simplified error handling
askama = "0.14"   # For Jinja style templates
chrono = "0.4"    # For timestamp handling
env_logger = "0.11.8"
log = "0.4.27"
smf = "0.2.3"     # SMF service management
strum = { version = "0.27.1", features = ["derive"] } # String friendly enums
tempfile = "3.8"  # For temporary directory/file handling

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "reconfigure"
path = "src/reconfigure.rs"
